@@ -3,6 +3,8 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
           - ':no_end_test' option added
           - test added showing that we play nicely with 'skip_all'
+          - allow_warnings() can now accept one or more regexes, of warnings
+            to ignore
 
 0.001-TRIAL  2013-03-09 16:56:29 PST-0800 (Karen Etheridge)
           - Initial release.
